--- a/assets/css/out.css
+++ b/assets/css/out.css
@@ -573,6 +573,9 @@
   .max-w-lg {
     max-width: var(--container-lg);
   }
+  .min-w-0 {
+    min-width: calc(var(--spacing) * 0);
+  }
   .flex-1 {
     flex: 1;
   }
@@ -1114,6 +1117,9 @@
   .break-all {
     word-break: break-all;
   }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
   .text-amber-500 {
     color: var(--color-amber-500);
   }
@@ -1496,6 +1502,9 @@
     }
   }
 }
+body {
+  background-color: white !important;
+}
 i {
   font-style: normal;
   font-family: var(--font-mono);
@@ -1516,6 +1525,19 @@ cent {
   font-style: italic;
 }
 .blog-content {
+  @media (max-width: 640px) {
+    .highlight {
+      max-width: 85vw;
+    }
+    img {
+      max-width: 85vw;
+    }
+  }
+  @media (max-width: 1080px) {
+    .highlight {
+      max-width: max-content;
+    }
+  }
   h1 {
     margin-top: calc(var(--spacing) * 12);
     margin-bottom: calc(var(--spacing) * 4);
